--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 
+{% load staticfiles %}
+<!--calling static will combine the URL in STATIC_URL with images/rango.jpg -->
+
 <html lang="en">
     <head>
         <title>Rango</title>
@@ -13,6 +16,7 @@
         </div>
         <div>
             <a href="/rango/about/">About</a><br />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         </div>
     </body>
 </html>
