--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -7,6 +7,10 @@
 
     <body>
         <div>
+            <a href="/rango/">Index</a><br />
+        </div>
+
+        <div>
         {% if category %}
             <h1>{{ category.name }}</h1>
             {% if pages %}
