--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,6 +17,7 @@
 
     <div>
     {% if categories %}
+        <h2>Most Liked Categories</h2>
         <ul>
             {% for category in categories %}
             <li>
@@ -29,10 +30,25 @@
     {% endif %}
     </div>
 
-        <div>
-            <a href="/rango/about/">About Rango</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                 alt="Picture of Rango" />
-        </div>
+    <div>
+    {% if pages %}
+        <h2>Most Viewed Pages</h2>
+        <ul>
+            {% for page in pages %}
+            <li>
+                <a href="{{ page.url }}">{{ page.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+         <strong>There are no pages present.</strong>
+    {% endif %}
+    </div>
+
+    <div>
+        <a href="/rango/about/">About Rango</a><br />
+        <img src="{% static 'images/rango.jpg' %}"
+             alt="Picture of Rango" />
+    </div>
     </body>
 </html>
