--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -47,6 +47,7 @@
 
     <div>
         <a href="/rango/about/">About Rango</a><br />
+        <a href="/rango/add_category/">AddaNewCategory</a><br/>
         <img src="{% static 'images/rango.jpg' %}"
              alt="Picture of Rango" />
     </div>
