--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
-
+{%extends 'rango/base.html'%}
 {% load staticfiles %}
 <!--calling static will combine the URL in STATIC_URL with images/rango.jpg -->
 
-<html lang="en">
-    <head>
-        <title>Rango</title>
-    </head>
+{%block title_block%}
+    About Rango
+{%endblock%}
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
-        <div>
-            <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
-        </div>
-    </body>
-</html>
+{%block body_block%}
+    <h1>Rango says...</h1>
+    <div>
+        hey there partner! <br />
+        <strong>{{ boldmessage }}</strong><br />
+    </div>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
+    </div>
+{%endblock%}
