--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,33 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Rango</title>
-    </head>
+{%extends 'rango/base.html'%}
+{%load staticfiles%}
 
-    <body>
-        <div>
-            <a href="/rango/">Index</a><br />
-        </div>
+{%block title_block%}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{%endblock%}
 
-        <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-            <ul>
-                {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-            {% else %}
-            <strong>No pages currently in category.</strong>
-            {% endif %}
+{%block body_block%}
+    {% if category %}
+    <h1>{{ category.name }}</h1>
+    {% if pages %}
+    <ul>
+        {% for page in pages %}
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <strong>No pages currently in category.</strong>
+    {% endif %}
 
-            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
-        {% else %}
-            The specified category does not exist.
-        {% endif %}
-        </div>
-    </body>
-
-</html>
+    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+    {% else %}
+    The specified category does not exist.
+    {% endif %}
+{%endblock%}
