--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,36 +1,27 @@
-<!DOCTYPE html>
-
+{%extends 'rango/base.html'%}
 {% load staticfiles %}
 <!--calling static will combine the URL in STATIC_URL with images/rango.jpg -->
 
-<html lang="en">
-    <head>
-        <title>Rango</title>
-    </head>
+{%block title_block%}
+    Homepage
+{%endblock%}
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong>
-        </div>
-
-    <div>
+{%block body_block%}
     {% if categories %}
         <h2>Most Liked Categories</h2>
         <ul>
             {% for category in categories %}
             <li>
-                <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                <a href="{% url 'rango:show_category' category.slug %}">
+                    {{ category.name }}
+                </a>
             </li>
             {% endfor %}
         </ul>
     {% else %}
         <strong>There are no categories present.</strong>
     {% endif %}
-    </div>
 
-    <div>
     {% if pages %}
         <h2>Most Viewed Pages</h2>
         <ul>
@@ -43,13 +34,6 @@
     {% else %}
          <strong>There are no pages present.</strong>
     {% endif %}
-    </div>
 
-    <div>
-        <a href="/rango/about/">About Rango</a><br />
-        <a href="/rango/add_category/">Add a New Category</a><br />
-        <img src="{% static 'images/rango.jpg' %}"
-             alt="Picture of Rango" />
-    </div>
-    </body>
-</html>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+{%endblock%}
