--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,19 +1,16 @@
-{%extends 'rango/base.html'%}
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<!--calling static will combine the URL in STATIC_URL with images/rango.jpg -->
 
-{%block title_block%}
+{% block title_block %}
     About Rango
-{%endblock%}
+{% endblock %}
 
-{%block body_block%}
-    <h1>Rango says...</h1>
-    <div>
-        hey there partner! <br />
-        <strong>{{ boldmessage }}</strong><br />
-    </div>
-    <div>
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
-    </div>
-{%endblock%}
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+    here is the about page.
+    <strong>{{ boldmessage }}</strong><br />
+</div>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+{% endblock %}
