--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {%load staticfiles%}
+{%load rango_template_tags %}
 
 <html>
     <head lang="en">
@@ -17,11 +18,17 @@
         {% endblock %}
         </div>
 
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list category%}
+            {% endblock %}
+        </div>
+
         <hr />
         <div>
             <ul>
-            <li><a href="{% url 'rango:add_category' %}">Add a Category</a></li>
-            <li><a href="{% url 'rango:about' %}">About Rango</a></li>
+            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+            <li><a href="{% url 'rango:about' %}">About</a></li>
             <li><a href="{% url 'rango:index' %}">Index</a></li>
             </ul>
         </div>
