--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,39 +1,42 @@
-{%extends 'rango/base.html'%}
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<!--calling static will combine the URL in STATIC_URL with images/rango.jpg -->
 
-{%block title_block%}
+{% block title_block %}
     Homepage
-{%endblock%}
+{% endblock %}
 
-{%block body_block%}
-    {% if categories %}
-        <h2>Most Liked Categories</h2>
-        <ul>
-            {% for category in categories %}
-            <li>
-                <a href="{% url 'rango:show_category' category.slug %}">
-                    {{ category.name }}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <strong>There are no categories present.</strong>
-    {% endif %}
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+    hey there partner! <br />
+    <strong>{{ boldmessage }}</strong><br />
+</div>
 
-    {% if pages %}
-        <h2>Most Viewed Pages</h2>
-        <ul>
-            {% for page in pages %}
-            <li>
-                <a href="{{ page.url }}">{{ page.title }}</a>
-            </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-         <strong>There are no pages present.</strong>
-    {% endif %}
+<div>
+    <h2>Most Liked Categories</h2>
+{% if categories %}
+    <ul>
+    {% for category in categories %}
+        <li><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <strong>There are no categories present.</strong>
+{% endif %}
+</div>
 
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-{%endblock%}
+<div>
+    <h2>Most Viewed Pages</h2>
+{% if pages %}
+    <ul>
+    {% for page in pages %}
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <strong>There are no pages present.</strong>
+{% endif %}
+</div>
+
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+{% endblock %}
