--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-{%load staticfiles%}
-{%load rango_template_tags %}
+{% load staticfiles %}
+{% load rango_template_tags %}
 
 <html>
     <head lang="en">
@@ -17,19 +17,13 @@
         {% block body_block %}
         {% endblock %}
         </div>
-
-        <div>
-            {% block sidebar_block %}
-                {% get_category_list category%}
-            {% endblock %}
-        </div>
-
         <hr />
         <div>
             <ul>
             <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
             <li><a href="{% url 'rango:about' %}">About</a></li>
             <li><a href="{% url 'rango:index' %}">Index</a></li>
+            <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
             </ul>
         </div>
     </body>
