--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -17,6 +17,13 @@
         {% block body_block %}
         {% endblock %}
         </div>
+
+        <div>
+             {% block sidebar_block %}
+                 {% get_category_list category%}
+             {% endblock %}
+         </div>
+
         <hr />
         <div>
             <ul>
@@ -24,6 +31,7 @@
             <li><a href="{% url 'rango:about' %}">About</a></li>
             <li><a href="{% url 'rango:index' %}">Index</a></li>
             <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+            <li><a href="{% url 'rango:login' %}">Login</a></li>
             </ul>
         </div>
     </body>
